<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_title_main"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipc_demo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_subtitle_main"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_main" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_message_hint_main"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_the_message_that_will_be_sent_to_clients"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_subtitle_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_message_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/message"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_message_hint_main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_message_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_message_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_message"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_message_main" />

</androidx.constraintlayout.widget.ConstraintLayout>